--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "start": "ts-node src/index.ts",
-    "dev": "nodemon --exec ts-node src/index.ts",
+    "dev": "npm run create:migration && nodemon --exec ts-node src/index.ts",
     "create:migration": "mikro-orm migration:create",
     "clear:migration": "mikro-orm cache:clear"
   },
