Added Queries For Other Actions

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,8 +11,8 @@
     "noImplicitAny": false,
     "strictNullChecks": true,
     "strictFunctionTypes": true,
-    "noImplicitThis": true,
-    "noUnusedLocals": true,
+    "noImplicitThis": true, 
+    "noUnusedLocals": false,
     "noUnusedParameters": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
